--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 .idea/
-.settings/
+.settings/*
+.settings
+spring_sample/.setttings/*
 # Package Files #
 *.jar
 *.war
